Fix alignment of buybutton and title

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -169,7 +169,7 @@
   .title {
     padding-left: 10%;
     padding-right: 10%;
-    height: 80px;
+    height: 25%; 
     font-size: 20px;
     text-align: center;
     margin: 0;
